--- a/wp-content/themes/mario/style.css
+++ b/wp-content/themes/mario/style.css
@@ -8,5 +8,14 @@ Version: 1.0
 */
 
 body{
-	background-color: olive;
+	
+}
+
+.header{
+	background-color: #404040;
+	padding: 1px 1px;
+}
+
+.header h1, h2 {
+	color: white;
 }
