--- a/wp-content/themes/mario/style.css
+++ b/wp-content/themes/mario/style.css
@@ -13,9 +13,17 @@ body{
 
 .header{
 	background-color: #404040;
-	padding: 1px 1px;
+	padding: 1em 1em;
 }
 
 .header h1, h2 {
 	color: white;
+}
+
+.content {
+	padding: 0.5em 0.5em;
+}
+
+.content article{
+	width: 30%;
 }
