home con filtro en los posts que se muestran

--- a/wp-content/themes/mario/style.css
+++ b/wp-content/themes/mario/style.css
@@ -25,5 +25,10 @@ body{
 }
 
 .content article{
-	width: 30%;
+	width: 80%;
+}
+
+.datos{
+	border-bottom: 1px solid orange;
+	margin-bottom: 1em;
 }
