se crea template para categoria especifica a partir de su id

--- a/wp-content/themes/mario/style.css
+++ b/wp-content/themes/mario/style.css
@@ -50,3 +50,13 @@ figure{
 	display: inline-block;
 	color: white;
 }
+
+.container__item{
+	width: 90$;
+	margin: 0 auto;
+	display: block;
+}
+
+.body{
+	background-color: orange;
+}
