--- a/wp-content/themes/mario/style.css
+++ b/wp-content/themes/mario/style.css
@@ -74,3 +74,63 @@ aside{
 	display: table-cell;
 	width: 72%;
 }
+
+.nav{
+	width: auto;
+	height: auto;
+	color: red;
+	overflow: visible;
+	cursor: pointer;
+}
+
+.nav__list{
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	background: olive;
+	width: 100%;
+	display: table;
+	table-layout: fixed;
+}
+
+.nav__list li{
+	display: table-cell;
+	vertical-align: middle;
+	border-left: 1px solid blue;
+	border-right: 1px solid green;
+	text-align: center;
+	padding: 1em 0;
+}
+
+.nav__list li a{
+	color: black;
+	text-decoration: none;
+
+}
+
+.nav--footer{
+	
+}
+
+.nav--footer__list{
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	background: grey;
+	width: 100%;
+	display: table;
+	table-layout: fixed;
+}
+
+.nav--footer__list li{
+	display: table-cell;
+	font-size: 0.8em;
+	padding: 0.5em;
+	text-align: center;
+}
+
+.nav--footer__list li a{
+	color: orange;
+	text-decoration: none;
+
+}
